# cansi

./: .gitignore  AGENTS.md  Cargo.toml  sample-string.txt
benches/: benches.rs
notes/: Benchmarking.md
src/: categorise.rs  lib.rs  logging.rs  new_approach.rs  parser.rs  tests.rs
src/tests/: legacy.rs  mod.rs
