[package]
name = "cansi"
description = "Catergorise ANSI - ANSI escape code parser and categoriser"
version = "2.2.1"
authors = ["kurt <kurtlawrence92@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kurtlawrence/cansi"
repository = "https://github.com/kurtlawrence/cansi"
documentation = "https://docs.rs/cansi/"
readme = "README.md"
keywords = [ "ansi", "parsing", "terminal", "no_std" ]
edition = "2021"

[features]
default = ["std"]
std = ["thiserror/std"]
alloc = []

[dependencies]
thiserror = { version = "2", default-features = false }

[dev-dependencies]
criterion = "0.3"
colored = "2"

[[bench]]
name = "benches"
harness = false
