[package]
name = "cansi"
description = "Categorise ANSI - ANSI escape code parser and categoriser"
version = "2.2.1"
authors = ["kurt <kurtlawrence92@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kurtlawrence/cansi"
repository = "https://github.com/kurtlawrence/cansi"
documentation = "https://docs.rs/cansi/"
readme = "README.md"
keywords = [ "ansi", "parsing", "terminal", "no_std" ]
edition = "2021"

[features]
default = ["std"]
std = ["thiserror/std"]
alloc = []
logging = ["log"]

[dependencies]
thiserror = { version = "2", default-features = false }
log = { version = "0.4", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.8.2"
colored = "3.1.1"

[[bench]]
name = "benches"
harness = false
